# sophon_chip

./: CMakeLists.txt
src/opencv_test/: CMakeLists.txt  main.cpp
